Initial work on timeline viz

--- a/DataExploration.Rmd
+++ b/DataExploration.Rmd
@@ -78,7 +78,7 @@ cost.contracts.2.df <- contract.df %>%
 write.csv(cost.contracts.2.df %>% mutate(total_cost = as.character(total_cost)), "./visualization_data/contract_costs_2_time.csv", row.names = FALSE)
 
 # Contracts
-write.csv(contracts.df %>% select(subaward_action_date, subaward_amount, subawardee_name, subaward_description), "./visualization_data/contract_info.csv", row.names = FALSE)
+write.csv(contract.df %>% select(subaward_action_date, subawardee_name, subaward_description, subaward_amount), "./visualization_data/contract_info.csv", row.names = FALSE)
 ```
 
 ## Sunburst Chart
